# ocaml-solid

./: .depend  .gitignore  Makefile  README.md  checkocaml.ml  configure  configure.in  header  ldp_http.ml  ldp_http.mli  ldp_types.ml  ldp_types.mli  master.Makefile.in  solid_http.ml  solid_http.mli  solid_profile.ml  solid_profile.mli  solid_updates.ml  test_solid.html  test_solid.ml
examples/: .gitignore  Makefile  containers.html  containers.ml  solid_delete.ml  solid_get.ml  solid_ls.ml  solid_put.ml  tls_common.ml  tls_get.ml  tls_ls.ml  tls_put.ml
src/: .depend  .gitignore  META.in  Makefile  apache_proxy_ssl.conf  cohttp_tls.ml  config-test.json  ldp_cache.ml  ldp_cache.mli  ldp_containers.ml  ldp_containers.mli  ldp_cookies.ml  ldp_cookies.mli  ldp_curl.ml  ldp_curl.mli  ldp_http.ml  ldp_http.mli  ldp_js.ml  ldp_js.mli  ldp_log.ml  ldp_log.mli  ldp_misc.ml  ldp_misc.mli  ldp_tls.ml  ldp_tls.mli  ldp_types.ml  ldp_types.mli  server_acl.ml  server_auth.ml  server_conf.ml  server_fs.ml  server_fs_route.ml  server_git.ml  server_handler.ml  server_http.ml  server_http_tls.ml  server_log.ml  server_log.mli  server_main.ml  server_misc.ml  (+19 more)
src/tests/: Makefile  Makefile.client  Makefile.common  config.json
src/tests/gitfs/: ,acl  .gitignore  Makefile  config-http.json  config.json
src/tests/patch/: .gitignore  Makefile  client.ml
src/tests/patch/origin/: ,meta  graph.ttl  graph.ttl,meta  image.png,meta
src/tests/patch/ref/: ,meta  graph.ttl  image.png,meta
src/tests/solid-conf/: Makefile  client.ml
src/tests/solid-conf/origin/: ,meta
src/tests/user_creation/: .gitignore  Makefile  client.ml  toto.pem
src/tests/user_creation/ref/toto/: ,acl  ,meta
src/tests/user_creation/ref/toto/Applications/: ,acl,meta  ,meta
src/tests/user_creation/ref/toto/Inbox/: ,acl  ,acl,meta  ,meta
src/tests/user_creation/ref/toto/Private/: ,acl  ,acl,meta  ,meta
src/tests/user_creation/ref/toto/Public/: ,acl  ,acl,meta  ,meta
src/tests/user_creation/ref/toto/Shared/: ,acl  ,acl,meta  ,meta
src/tests/user_creation/ref/toto/Work/: ,acl  ,acl,meta  ,meta
src/tests/user_creation/ref/toto/profile/: ,meta  card  card,acl,meta  card,meta
src/tests/user_creation/ref/toto/settings/: ,acl,meta  ,meta  preferences.ttl  preferences.ttl,meta
src/user_templates/Applications/: ,acl
src/user_templates/Inbox/: ,acl
src/user_templates/Preferences/: ,acl  prefs.ttl
src/user_templates/Public/: ,acl
src/user_templates/Work/: ,acl
src/user_templates/profile/: card  card,acl
